<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/textView_profile"
        android:layout_width="164dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="@string/profile_photo"
        android:textColor="@color/primary_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_photo_remove"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape"
        android:contentDescription="@string/delete_icon"
        android:src="@drawable/ic_trash"
        app:layout_constraintEnd_toStartOf="@+id/button_camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile"
        tools:srcCompat="@drawable/ic_trash" />

    <ImageButton
        android:id="@+id/button_camera"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape"
        android:contentDescription="@string/camera_image"
        android:src="@drawable/ic_google_images"
        app:layout_constraintEnd_toStartOf="@+id/button_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_photo_remove"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile"
        tools:srcCompat="@drawable/ic_google_images" />

    <ImageButton
        android:id="@+id/button_gallery"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape"
        android:contentDescription="@string/gallery_icon"
        android:src="@drawable/ic_google_photos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_camera"
        app:layout_constraintTop_toBottomOf="@+id/textView_profile"
        tools:srcCompat="@drawable/ic_google_photos" />

    <TextView
        android:id="@+id/textView_remove"
        android:layout_width="68dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/remove_photo"
        android:textAlignment="center"
        android:textColor="@color/secondary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_camera"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_photo_remove"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView_gallery"
        android:layout_width="68dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/gallery"
        android:textAlignment="center"
        android:textColor="@color/secondary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_camera"
        app:layout_constraintTop_toBottomOf="@+id/button_gallery"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView_camera"
        android:layout_width="68dp"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/camera"
        android:textAlignment="center"
        android:textColor="@color/secondary_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_gallery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_remove"
        app:layout_constraintTop_toBottomOf="@+id/button_camera"
        app:layout_constraintVertical_bias="0.002" />

</androidx.constraintlayout.widget.ConstraintLayout>