<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragments.dashboard.ProfileFragment"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/profile_text"
        android:textColor="@color/primary_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/rounded_image"
        android:layout_width="175dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        app:civ_shadow="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/logo">

    </com.mikhaellopez.circularimageview.CircularImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:baselineAligned="false"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:hint="@string/username_string"
        android:labelFor="@id/username_display"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxStrokeColor="@color/secondary_dark"
        app:hintEnabled="true"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rounded_image"
        app:startIconDrawable="@drawable/fui_ic_anonymous_white_24dp"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_display"
            style="@style/dashboard_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:clickable="false"
            android:contextClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar_profile"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="216dp"
        android:layout_height="14dp"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:hint="@string/name_string"
        android:labelFor="@id/name_display"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxStrokeColor="@color/secondary_dark"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field"
        app:startIconDrawable="@drawable/fui_ic_anonymous_white_24dp"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_display"
            style="@style/dashboard_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:clickable="false"
            android:contextClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:hint="@string/email_string"
        android:labelFor="@id/email_display"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="#00FFFFFF"
        app:boxStrokeColor="@color/secondary_dark"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_field"
        app:startIconDrawable="@drawable/fui_ic_mail_white_24dp"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_display"
            style="@style/dashboard_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:clickable="false"
            android:contextClickable="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/change_userImage"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:backgroundTint="@color/secondary_light"
        android:clickable="true"
        android:contentDescription="@string/user_image"
        android:focusable="true"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/rounded_image"
        app:layout_constraintEnd_toEndOf="@+id/rounded_image"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="@+id/rounded_image" />

</androidx.constraintlayout.widget.ConstraintLayout>