<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".activities.MainActivity"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/register_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/cagliostro"
        android:text="@string/register_string"
        android:textAlignment="center"
        android:textColor="@color/primary_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_name"
        style="@style/input_layout_style"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name_string"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="@color/background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/secondary_dark"
        app:counterTextColor="@color/secondary_dark"
        app:errorEnabled="true"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_textView"
        app:startIconDrawable="@drawable/fui_ic_anonymous_white_24dp"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_username"
        style="@style/input_layout_style"
        android:layout_height="wrap_content"
        android:hint="@string/username_string"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="@color/background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/secondary_dark"
        app:counterTextColor="@color/secondary_dark"
        app:errorEnabled="true"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_name"
        app:startIconDrawable="@drawable/fui_ic_anonymous_white_24dp"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_input_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_email"
        style="@style/input_layout_style"
        android:layout_height="wrap_content"
        android:hint="@string/email_inputHint"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="@color/background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/secondary_dark"
        app:counterTextColor="@color/secondary_dark"
        app:errorEnabled="true"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_username"
        app:startIconDrawable="@drawable/fui_ic_mail_white_24dp"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_password"
        style="@style/input_layout_style"
        android:layout_height="wrap_content"
        android:hint="@string/password_string"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="@color/background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/secondary_dark"
        app:counterTextColor="@color/secondary_dark"
        app:errorEnabled="true"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_email"
        app:startIconDrawable="@android:drawable/ic_lock_idle_lock"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUp_confirmPassword"
        style="@style/input_layout_style"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_string"
        android:textColorHint="@color/secondary_dark"
        app:boxBackgroundColor="@color/background_color"
        app:boxBackgroundMode="filled"
        app:boxStrokeColor="@color/secondary_dark"
        app:counterTextColor="@color/secondary_dark"
        app:errorEnabled="true"
        app:hintTextColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_password"
        app:passwordToggleTint="@color/secondary_dark"
        app:startIconDrawable="@android:drawable/ic_lock_lock"
        app:startIconTint="@color/secondary_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword_input_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/register_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_confirmPassword" />

    <TextView
        android:id="@+id/login_redirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/login_redirect_string"
        android:textColor="@color/secondary_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <ProgressBar
        android:id="@+id/registerProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.483"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>